--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,15 @@ body {
   line-height: 1.5;
 }
 
+ul {
+  display: flex;
+  list-style-type: none;
+  margin: 10px;
+  padding: 10px;
+  word-spacing: normal;
+
+}
+
 .hero-banner{
   
 }
