--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,24 @@ body {
   line-height: 1.5;
 }
 
-ul {
+header{
+  text-align: center;
   display: flex;
+  margin: 20px 100px 20px;
+}
+
+ul {
   list-style-type: none;
   margin: 10px;
   padding: 10px;
-  word-spacing: normal;
 
+}
+
+li{
+display: block;
+width: 100px;
+text-align: center;
+float: right;
 }
 
 .hero-banner{
