--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 20px;
+  padding: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.5;
 }
@@ -20,13 +20,14 @@ header{
   text-align: center;
   display: flex;
   margin: 20px 100px 20px;
+  position:static;
 }
 
 ul {
   list-style-type: none;
   margin: 10px;
   padding: 10px;
-
+  position: fixed;
 }
 
 li{
