--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,25 @@ body {
 }
 
 header{
-  text-align: center;
   display: flex;
+  justify-content: space-between;
+  float: left;
   margin: 20px 100px 20px;
-  position:static;
+  position: static;
+  text-align: center;
 }
+
+
+.header nav{
+  float: right;
+}
+
 
 ul {
   list-style-type: none;
-  margin: 10px;
-  padding: 10px;
-  position: fixed;
+  position: static;
+  float: right;
+  text-align: center;
 }
 
 li{
@@ -38,7 +46,10 @@ float: right;
 }
 
 .hero-banner{
-  
+  position: relative;
+  width: 20%;
+  height: 20%;
+  margin: 20px;
 }
 
 .container{
@@ -53,13 +64,22 @@ a {
   text-decoration: none
 }
 
-h1,
-h2,
+h2{
+  position: absolute;
+  top: 200px;
+  font-size: 50px;
+  text-align: center;
+  margin: 100%;
+  
+  
+}
+
 h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin: 100px;
+  padding: 0;
 }
 
 p {
